# Kursach_OOP

./: .env_example  README.md  config.py  main.py  pyproject.toml
src/: api.py  save_file.py  utils.py  working_with_vacancies.py
